--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "sharpness",
+  "name": "twemoji-on-the-fastlane",
   "version": "0.0.1",
-  "homepage": "https://github.com/andrezimpel/sharpness",
+  "homepage": "https://github.com/andrezimpel/twemoji-on-the-fastlane",
   "authors": [
     "Andre Zimpel <az@yum.de>"
   ],
