--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
  {
-  "name": "twemoji-on-fastlane",
+  "name": "twemoji-on-the-fastlane",
   "version": "0.0.1",
   "homepage": "https://github.com/andrezimpel/twemoji-on-fastlane",
   "authors": [
